<resources>
    <string name="app_name">PetSide</string>
    <string name="next_button">Next</string>
    <string name="email">E-mail</string>
    <string name="description">Description</string>
    <string name="default_error_description">Что-то пошло не так…</string>
    <string name="default_error_title">Ошибка</string>
    <string name="wrong_email">Некорректный E-mail</string>
    <string name="auth_success_title">SUCCESS</string>
    <string name="auth_success_description">Authorization completed successfully</string>
    <string name="ok">OK</string>
    <string name="api_key_hint">Api key</string>
</resources>